another test fixing ui too big for mobile

--- a/src/app/containers/game/game.component.scss
+++ b/src/app/containers/game/game.component.scss
@@ -4,7 +4,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  padding-bottom: 90px;
+  padding-bottom: 30px;
 
   box-sizing: border-box;
   height: 100%;
