--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,7 +4,6 @@ html {
   padding: 0;
   font-family: "Poppins", sans-serif;
   width: 100vw;
-  height: 100vh;
-  min-height: 100vh;
-  min-height: -webkit-fill-available;
+  height: 100%;
+  min-height: 100%;
 }
